# vllm-ascend

benchmarks/ops/: bench_turboquant_compressed_k_score.py  bench_turboquant_decode_e2e.py  bench_turboquant_fused_decode_attention.py  bench_turboquant_prod_dequant.py
benchmarks/scripts/: analyze_turboquant_profile.py  check_turboquant_llama_correctness.py  run_turboquant_encode_debug_sweep.sh  run_turboquant_m4_debug_sweep.sh  run_turboquant_vs_plain_best.sh
csrc/: build_aclnn.sh  torch_binding.cpp  torch_binding_meta.cpp
csrc/tq_dequant_mse_paged/: tq_dequant_mse_paged_torch_adpt.h
csrc/tq_dequant_mse_paged/op_host/: CMakeLists.txt  tq_dequant_mse_paged.cpp  tq_dequant_mse_paged_def.cpp  tq_dequant_mse_paged_proto.cpp  tq_dequant_mse_paged_tiling.cpp  tq_dequant_mse_paged_tiling.h
csrc/tq_dequant_mse_paged/op_kernel/: tq_dequant_mse_paged.cpp
csrc/tq_dequant_mse_paged_scaled/: tq_dequant_mse_paged_scaled_torch_adpt.h
csrc/tq_dequant_mse_paged_scaled/op_host/: CMakeLists.txt  tq_dequant_mse_paged_scaled_def.cpp  tq_dequant_mse_paged_scaled_proto.cpp  tq_dequant_mse_paged_scaled_tiling.cpp  tq_dequant_mse_paged_scaled_tiling.h
csrc/tq_dequant_mse_paged_scaled/op_kernel/: tq_dequant_mse_paged_scaled.cpp
csrc/tq_dequant_prod_paged/: tq_dequant_prod_paged_torch_adpt.h
csrc/tq_dequant_prod_paged/op_host/: CMakeLists.txt  tq_dequant_prod_paged_def.cpp  tq_dequant_prod_paged_proto.cpp  tq_dequant_prod_paged_tiling.cpp  tq_dequant_prod_paged_tiling.h
csrc/tq_dequant_prod_paged/op_kernel/: tq_dequant_prod_paged.cpp
csrc/tq_encode_kv_to_paged_cache/: tq_encode_kv_to_paged_cache_torch_adpt.h
csrc/tq_encode_kv_to_paged_cache/op_host/: CMakeLists.txt  tq_encode_kv_to_paged_cache_def.cpp  tq_encode_kv_to_paged_cache_proto.cpp  tq_encode_kv_to_paged_cache_tiling.cpp  tq_encode_kv_to_paged_cache_tiling.h
csrc/tq_encode_kv_to_paged_cache/op_kernel/: tq_encode_kv_to_paged_cache.cpp
csrc/tq_encode_mse_paged_cache/: tq_encode_mse_paged_cache_torch_adpt.h
csrc/tq_encode_mse_paged_cache/op_host/: CMakeLists.txt  tq_encode_mse_paged_cache_def.cpp  tq_encode_mse_paged_cache_proto.cpp  tq_encode_mse_paged_cache_tiling.cpp  tq_encode_mse_paged_cache_tiling.h
csrc/tq_encode_mse_paged_cache/op_kernel/: tq_encode_mse_paged_cache.cpp
csrc/tq_encode_prod_paged_cache/: tq_encode_prod_paged_cache_torch_adpt.h
csrc/tq_encode_prod_paged_cache/op_host/: CMakeLists.txt  tq_encode_prod_paged_cache_def.cpp  tq_encode_prod_paged_cache_proto.cpp  (+2 more)
csrc/tq_fused_kv_update_attention_decode/: tq_fused_kv_update_attention_decode_torch_adpt.h
csrc/tq_prod_mse_paged_attention/: tq_prod_mse_paged_attention_torch_adpt.h
csrc/tq_prod_paged_k_score/: tq_prod_paged_k_score_torch_adpt.h
csrc/turboquant/: CMakeLists.txt  build.sh  tq_dequant_mse_paged_binding.cpp  tq_dequant_mse_paged_kernel.cpp
tools/turboquant_p0/: README.md  aggregate_summary.py  collect_env.py  common.py  run_benchmarks.py  run_greedy_decode.py  run_memory_baseline.py  run_niah.py  run_p0_suite.py  run_ppl.py  run_prompt_dataset_eval.py
vllm_ascend/: platform.py
vllm_ascend/attention/: attention_v1.py
vllm_ascend/compilation/: graph_fusion_pass_manager.py
vllm_ascend/quantization/: modelslim_config.py
vllm_ascend/worker/: model_runner_v1.py
(+37 files in other folders)
